--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -72,36 +72,24 @@
                 </div>
                 <!--/.direct-chat-messages-->
 
-                <!-- Contacts are loaded here -->
-                <!--<div class="direct-chat-contacts">-->
-                  <!--<ul class="contacts-list">-->
-                    <!--<li>-->
-                      <!--<a href="#">-->
-                        <!--<img class="contacts-list-img" src="../../../../assets/img/user1-128x128.jpg" alt="User Image">-->
-
-                        <!--<div class="contacts-list-info">-->
-                            <!--<span class="contacts-list-name">-->
-                              <!--Count Dracula-->
-                              <!--<small class="contacts-list-date pull-right">2/28/2015</small>-->
-                            <!--</span>-->
-                          <!--<span class="contacts-list-msg">How have you been? I was...</span>-->
-                        <!--</div>-->
-                        <!--&lt;!&ndash; /.contacts-list-info &ndash;&gt;-->
-                      <!--</a>-->
-                    <!--</li>-->
-                    <!--&lt;!&ndash; End Contact Item &ndash;&gt;-->
-                  <!--</ul>-->
-                  <!--&lt;!&ndash; /.contatcts-list &ndash;&gt;-->
-                <!--</div>-->
-                <!-- /.direct-chat-pane -->
               </div>
               <!-- /.box-body -->
               <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 1">
-                <form action="#" method="post">
+                <form #form="ngForm" (submit)="sendMsg(form)">
                   <div class="input-group">
-                    <input type="text" name="message" placeholder="Type Message ..." class="form-control">
+                    <input type="text"
+                           name="message"
+                           placeholder="Type Message ..."
+                           class="form-control"
+                           ngModel
+                           required
+                    >
                     <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary btn-flat">Send</button>
+                        <button type="submit"
+                                [disabled]="form.invalid"
+                                class="btn btn-primary btn-flat">
+                          Send
+                        </button>
                       </span>
                   </div>
                 </form>
