Message is coming

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -29,7 +29,7 @@
                     <div class="col-md-10">
                       <div class="chat-content">
                         <h3>{{contact.status}} <span>5 days</span></h3>
-                        <p>Lorem Ipsum is simply...{{contact.room}}</p>
+                        <p>{{contact.room}}</p>
                       </div>
                     </div>
                   </li>
