--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -15,96 +15,84 @@
             <div class="row">
               <h2>Messages</h2>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-3">
             <div class="row">
-              <div class="chat-list">
-                <ul>
-                  <ng-container *ngFor="let contact of (chatState | async).ongoing; let i = index;">
-                    <li [ngClass]="{ active : currentChatIndex == i}"
-                        *ngIf="contact.status != 3"
-                        (click)="changeCurrentChat(i)">
-                        <div class="col-md-2">
-                          <div class="chat-head row">
-                            <img src="../../../../assets/img/avatar5.png" class="img-responsive">
+              <div class="col-md-3 col-sm-3">
+                <div class="row">
+                  <div class="chat-list">
+                    <ul>
+                      <ng-container *ngFor="let contact of (chatState | async).ongoing; let i = index;">
+                        <li [ngClass]="{ active : currentChatIndex == i}"
+                            *ngIf="contact.status != 3 && contact.status != 5"
+                            (click)="changeCurrentChat(i)">
+                          <div class="col-md-2">
+                            <div class="chat-head row">
+                              <img src="../../../../assets/img/avatar5.png" class="img-responsive">
+                            </div>
                           </div>
-                        </div>
-                        <div class="col-md-10">
-                          <div class="chat-content">
-                            <h3>{{contact.client}} <span>5 days</span></h3>
-                            <p>{{contact.room}}</p>
+                          <div class="col-md-10">
+                            <div class="chat-content">
+                              <h3>{{contact.client}} <span>5 days</span></h3>
+                              <p>{{contact.room}}</p>
+                            </div>
                           </div>
-                        </div>
-                    </li>
-                  </ng-container>
-                  <!--<li [ngClass]="{ active : currentChatIndex == i}"-->
-                      <!--*ngFor="let contact of (chatState | async).ongoing; let i = index;"-->
-                      <!--(click)="changeCurrentChat(i)">-->
-                    <!--<div *ngIf="contact.status != 3">-->
-                      <!--<div class="col-md-2">-->
-                        <!--<div class="chat-head row">-->
-                          <!--<img src="../../../../assets/img/avatar5.png" class="img-responsive">-->
-                        <!--</div>-->
-                      <!--</div>-->
-                      <!--<div class="col-md-10">-->
-                        <!--<div class="chat-content">-->
-                          <!--<h3>{{contact.client}} <span>5 days</span></h3>-->
-                          <!--<p>{{contact.room}}</p>-->
-                        <!--</div>-->
-                      <!--</div>-->
-                    <!--</div>-->
-                  <!--</li>-->
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-9 col-sm-9">
-            <div class="box box-primary direct-chat direct-chat-primary">
-              <div class="box-body">
-                <!-- Conversations are loaded here -->
-                <div class="direct-chat-messages">
-                  <!-- Message. Default to the left -->
-                  <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
-                    <div class="direct-chat-info clearfix">
-                      <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
-                      <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
-                    </div>
-                    <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
-                    <div class="direct-chat-text">
-                      {{chat.message}}
-                    </div>
+                        </li>
+                      </ng-container>
+                    </ul>
                   </div>
-                  <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
-                    <button (click)="onAcceptOrReject(2)" class="btn btn-primary">Accept</button>
-                    <button (click)="onAcceptOrReject(3)" class="btn btn-danger">Reject</button>
-                  </div>
-
                 </div>
-                <!--/.direct-chat-messages-->
-
               </div>
-              <!-- /.box-body -->
-              <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 1">
-                <form #form="ngForm" (submit)="sendMsg(form)">
-                  <div class="input-group">
-                    <input type="text"
-                           name="messageBody"
-                           placeholder="Type Message ..."
-                           class="form-control"
-                           ngModel
-                           required
-                    >
-                    <span class="input-group-btn">
+              <div class="col-md-9 col-sm-9">
+                <div class="box box-primary direct-chat direct-chat-primary">
+                  <div class="box-body">
+                    <!-- Conversations are loaded here -->
+                    <div class="direct-chat-messages">
+                      <!-- Message. Default to the left -->
+                      <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
+                        <div class="direct-chat-info clearfix">
+                          <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
+                          <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
+                        </div>
+                        <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
+                        <div class="direct-chat-text">
+                          {{chat.message}}
+                        </div>
+                      </div>
+                      <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
+                        <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
+                        <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
+                      </div>
+                      <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
+                        <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
+                      </div>
+
+                    </div>
+                    <!--/.direct-chat-messages-->
+
+                  </div>
+                  <!-- /.box-body -->
+                  <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 1">
+                    <form #form="ngForm" (submit)="sendMsg(form)">
+                      <div class="input-group">
+                        <input type="text"
+                               name="messageBody"
+                               placeholder="Type Message ..."
+                               class="form-control"
+                               ngModel
+                               required
+                        >
+                        <span class="input-group-btn">
                         <button type="submit"
                                 [disabled]="form.invalid"
                                 class="btn btn-primary btn-flat">
                           Send
                         </button>
                       </span>
+                      </div>
+                    </form>
                   </div>
-                </form>
+                  <!-- /.box-footer-->
+                </div>
               </div>
-              <!-- /.box-footer-->
             </div>
           </div>
         </div>
