--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -45,7 +45,7 @@
                 <div class="box box-primary direct-chat direct-chat-primary">
                   <div class="box-body">
                     <!-- Conversations are loaded here -->
-                    <div class="direct-chat-messages">
+                    <div class="direct-chat-messages" appAutoScroll>
                       <!-- Message. Default to the left -->
                       <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
                         <div class="direct-chat-info clearfix">
