--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -42,55 +42,62 @@
                 </div>
               </div>
               <div class="col-md-9 col-sm-9">
-                <div class="box box-primary direct-chat direct-chat-primary">
-                  <div class="box-body">
-                    <!-- Conversations are loaded here -->
-                    <div class="direct-chat-messages" appAutoScroll>
-                      <!-- Message. Default to the left -->
-                      <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
-                        <div class="direct-chat-info clearfix">
-                          <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
-                          <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
+                <div class="row">
+                  <div class="box box-primary direct-chat direct-chat-primary">
+                    <div class="box-body">
+                      <!-- Conversations are loaded here -->
+                      <div class="direct-chat-messages">
+                        <!-- Message. Default to the left -->
+                        <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
+                          <div class="direct-chat-info clearfix">
+                            <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
+                            <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'">23 Jan 2:00 pm</span>
+                          </div>
+                          <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
+                          <div class="direct-chat-text">
+                            {{chat.message}}
+                          </div>
                         </div>
-                        <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
-                        <div class="direct-chat-text">
-                          {{chat.message}}
+                        <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
+                          <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
+                          <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
                         </div>
+                        <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
+                          <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
+                        </div>
+
                       </div>
-                      <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
-                        <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
-                        <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
-                      </div>
-                      <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
-                        <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
-                      </div>
+                      <!--/.direct-chat-messages-->
 
                     </div>
-                    <!--/.direct-chat-messages-->
-
-                  </div>
-                  <!-- /.box-body -->
-                  <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 1">
-                    <form #form="ngForm" (submit)="sendMsg(form)">
-                      <div class="input-group">
-                        <input type="text"
-                               name="messageBody"
-                               placeholder="Type Message ..."
-                               class="form-control"
-                               ngModel
-                               required
-                        >
-                        <span class="input-group-btn">
+                    <!-- /.box-body -->
+                    <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 1">
+                      <form #form="ngForm" (submit)="sendMsg(form)">
+                        <div class="input-group">
+                          <input type="text"
+                                 name="messageBody"
+                                 placeholder="Type Message ..."
+                                 class="form-control"
+                                 ngModel
+                                 required
+                          >
+                          <span class="input-group-btn">
+                        <button type="button"
+                                [disabled]="!form.invalid"
+                                class="btn btn-default btn-flat">
+                          <i class="fa fa-paperclip" aria-hidden="true"></i>
+                        </button>
                         <button type="submit"
                                 [disabled]="form.invalid"
                                 class="btn btn-primary btn-flat">
                           Send
                         </button>
                       </span>
-                      </div>
-                    </form>
+                        </div>
+                      </form>
+                    </div>
+                    <!-- /.box-footer-->
                   </div>
-                  <!-- /.box-footer-->
                 </div>
               </div>
             </div>
