--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
           <img src="../../../../assets/img/avatar5.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Jon Vaughn</p>
+          <p>  {{(authState | async).name}} </p>
           <a><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
@@ -176,6 +176,31 @@
                 <i class="fa fa-circle-o"></i> <span>Rejected Chats</span>
                 <span class="pull-right-container">
                   <small class="label pull-right bg-red">5</small>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <!-- Previous Chats of Agents -->
+        <li class="treeview"
+            *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin"
+            routerLinkActive="active"
+            [disable-hover]="true"
+            [appDropdown]="'menu-open'"
+        >
+          <a>
+            <i class="fa fa-comments"></i> <span> Chats</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li>
+              <a routerLink="/chats/list-agent">
+                <i class="fa fa-circle-o"></i> <span>Chats List</span>
+                <span class="pull-right-container">
+                  <small class="label pull-right bg-yellow">x</small>
                 </span>
               </a>
             </li>
