modify text in some pages

--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -128,22 +128,22 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="form-group" [ngClass]="(userName.invalid && userName.touched) ? 'has-error': ''">
-                    <label class="control-label" for="userName">Username
-                      <i *ngIf="userName.invalid && userName.touched" class="fa fa-times-circle-o"></i>
-                    </label>
-                    <input type="text"
-                           class="form-control"
-                           id="userName"
-                           placeholder="Username"
-                           [ngModel]="agent.userName"
-                           name="userName"
-                           required
-                           ngModel
-                           #userName="ngModel"
-                    >
-                    <span *ngIf="userName.invalid && userName.touched" class="help-block">Your Username is Required !</span>
-                  </div>
+                  <!--<div class="form-group" [ngClass]="(userName.invalid && userName.touched) ? 'has-error': ''">-->
+                    <!--<label class="control-label" for="userName">Username-->
+                      <!--<i *ngIf="userName.invalid && userName.touched" class="fa fa-times-circle-o"></i>-->
+                    <!--</label>-->
+                    <!--<input type="text"-->
+                           <!--class="form-control"-->
+                           <!--id="userName"-->
+                           <!--placeholder="Username"-->
+                           <!--[ngModel]="agent.userName"-->
+                           <!--name="userName"-->
+                           <!--required-->
+                           <!--ngModel-->
+                           <!--#userName="ngModel"-->
+                    <!--&gt;-->
+                    <!--<span *ngIf="userName.invalid && userName.touched" class="help-block">Your Username is Required !</span>-->
+                  <!--</div>-->
                 </div>
               </div>
 
