--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -22,7 +22,7 @@
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
                 <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">Username</th>
+                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">Username</th>-->
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Twilio SID</th>
@@ -35,7 +35,7 @@
                 <td>{{i}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
-                <td>{{item.username}}</td>
+                <!--<td>{{item.username}}</td>-->
                 <td>{{item.email}}</td>
                 <td>{{item.phone}}</td>
                 <td>{{item.twilio_info?.twilio_sid}}</td>
@@ -61,7 +61,7 @@
                 <th rowspan="1" colspan="1">#</th>
                 <th rowspan="1" colspan="1">First Name</th>
                 <th rowspan="1" colspan="1">Last Name</th>
-                <th rowspan="1" colspan="1">Username</th>
+                <!--<th rowspan="1" colspan="1">Username</th>-->
                 <th rowspan="1" colspan="1">Email</th>
                 <th rowspan="1" colspan="1">Phone</th>
                 <th rowspan="1" colspan="1">Twilio SID</th>
