--- a/src/app/core/layout/inner-pages/profile/profile.component.html
+++ b/src/app/core/layout/inner-pages/profile/profile.component.html
@@ -89,21 +89,21 @@
                                 </div>
 
                                 <!-- User Name -->
-                                <div class="form-group" [ngClass]="{ 'has-error': profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required') }">
-                                    <label for="userName" class="col-sm-2 control-label">
-                                        <i *ngIf="profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required')" class="fa fa-times-circle-o"></i>
-                                         User Name
-                                    </label>
-                                    <div class="col-sm-10">
-                                        <input type="text"
-                                               class="form-control"
-                                               id="userName"
-                                               formControlName="userName"
-                                               placeholder="Name"
-                                        >
-                                        <span *ngIf="profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required') && profileForm.get('userName').hasError('required')" class="help-block">Your User Name is Required!</span>
-                                    </div>
-                                </div>
+                                <!--<div class="form-group" [ngClass]="{ 'has-error': profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required') }">-->
+                                    <!--<label for="userName" class="col-sm-2 control-label">-->
+                                        <!--<i *ngIf="profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required')" class="fa fa-times-circle-o"></i>-->
+                                         <!--User Name-->
+                                    <!--</label>-->
+                                    <!--<div class="col-sm-10">-->
+                                        <!--<input type="text"-->
+                                               <!--class="form-control"-->
+                                               <!--id="userName"-->
+                                               <!--formControlName="userName"-->
+                                               <!--placeholder="Name"-->
+                                        <!--&gt;-->
+                                        <!--<span *ngIf="profileForm.get('userName').invalid && profileForm.get('userName').touched && profileForm.get('userName').hasError('required') && profileForm.get('userName').hasError('required')" class="help-block">Your User Name is Required!</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
 
                                 <!-- Email -->
                                 <div class="form-group" [ngClass]="{ 'has-error': profileForm.get('email').invalid && profileForm.get('email').touched }">
