Admin can view chats v0.2

--- a/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-chat/list-chat.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Ongoing Chats</h1>
+    <h1>Previous Chats</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="#">Tables</a></li>
@@ -58,13 +58,8 @@
                             {{chat.message}}
                           </div>
                         </div>
-
                       </div>
-                      <!--/.direct-chat-messages-->
-
                     </div>
-
-                    <!-- /.box-footer-->
                   </div>
                 </div>
               </div>
