--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Agent List</h1>
+    <h1>Contact List</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
       <li><a href="#">Tables</a></li>
@@ -12,7 +12,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Agent List</h3>
+            <h3 class="box-title">Contact List</h3>
           </div>
           <!-- /.box-header -->
           <div class="box-body">
@@ -20,41 +20,26 @@
               <thead>
               <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Client Name</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </thead>
               <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList; let i = index">
                 <td>{{i}}</td>
-                <td>{{item.first_name}}</td>
-                <td>{{item.last_name}}</td>
-                <td>{{item.email}}</td>
-                <td>{{item.phone}}</td>
-                <td>
-                  <!-- Single button -->
-                  <div class="btn-group" >
-                    <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false" *ngIf="chatMode" (click)="onViewChat(item.id)">
-                      View Chats
-                    </button>
-                    <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false" *ngIf="!chatMode" (click)="onViewContact(item.id)">
-                      View Contact List
-                    </button>
-                  </div>
-                </td>
+                <td>{{item.client_info.client_name.name}}</td>
+                <td>{{item.client_info.client_name.email}}</td>
+                <td>{{item.client_info.client_name.phone}}</td>
+
               </tr>
               </tbody>
               <tfoot>
               <tr>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">First Name</th>
-                <th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Last Name</th>
+                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Client Name</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </tfoot>
             </table>
